--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ color:skyblue;
 .quiz_box 
 {
     position: absolute;
-  top:50%;
-  left:50%;
+  top:15%;
+  background-color: rgb(27, 156, 207);
+  left:15%;
   transform:translate(50%,50%);
   border: 2px  solid white;
   padding:10px 30px;
@@ -38,4 +39,49 @@ color:skyblue;
   /* padding:30px; */
   max-width: 500px;
   /* width:100%;  */
+}
+.option
+{
+  border: 2px solid white;
+  padding:5px 30px;
+  border-radius:10px; 
+  font-size:20px; 
+  margin:5px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.option:hover
+{
+  background-color: skyblue;
+  color:white;
+}
+.footer_left
+{
+  padding:10px;
+  margin-top: 10px;
+}
+.next
+{
+  cursor: pointer;
+  transition: all 0.3s;
+  padding:5px;
+  border: 2px solid white;
+  font-size:20px;
+  border-radius: 5px;
+  margin-top: 10px;
+  transition: all 0.3s;
+
+}
+.next:hover
+{
+  background-color: skyblue;
+  color:white;
+}
+.footer
+{
+  border-top: 2px dashed white;
+  margin:10px;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
 }
